tests/ui/fail/parse_key.stderr
error[E0609]: no field `s` on type `&'static str`
 --> tests/ui/fail/parse_key.rs:5:21
  |
5 |         "README.md".s: "# Title"
  |                     ^
